ltibbhackathon-project2/manifestsfiles/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        
    spec:
      containers:
        - name: c1
          image: upendra9010/p2:app-image
          ports:
            - containerPort: 80
            
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
              
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 5
            
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
