ltibbhackathon-project2/manifestsfiles/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: appservice
  
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
