ltibbhackathon-project2/manifestsfiles/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbservice
  
spec:
  ClusterIP : none
  selector:
    app: app-database
  ports:
    - port: 3306
      targetPort: 33006
